# ParchKernel

./: .gitignore  Cargo.toml  build.rs
.cargo/: config
src/: config.rs  crt_setup.asm  linker.ld  main.rs
src/device/: device_manager.rs  device_tree.rs  mod.rs
src/device/drivers/: mod.rs  plic.rs  poweroff.rs  reboot.rs  rtc.rs  uart.rs  virtio_mmio.rs
src/fs/: manager.rs  mod.rs  pipes.rs  types.rs  vfs.rs
src/fs/fs_impl/: mod.rs
src/fs/fs_impl/dev_fs/: adapter.rs  fs.rs  mod.rs  pts.rs
src/fs/fs_impl/dev_fs/drivers/: device.rs  goldfish_rtc.rs  mod.rs  power.rs  uart.rs
src/fs/fs_impl/parch_fs/: base.rs  config.rs  fs.rs  mod.rs  types.rs
src/fs/fs_impl/proc_fs/: fd_dir.rs  mod.rs  pipes.rs  proc_dir.rs  proc_dotlink.rs  root_dir.rs
src/interrupt/: clint.rs  cpu.rs  int_callback.rs  kernel_trap.asm  mod.rs  plic.rs  trampoline.asm  trap_context.rs  trap_handler.rs  u_trampoline.asm
src/mem/: bitmap_reserve.asm  kernel_heap.rs  mem_layout.rs  mod.rs  page_allocator.rs  pagetable.rs  phys_bitmap.rs  segment.rs  types.rs
src/process/: def_handler.rs  manager.rs  mod.rs  pcb.rs  processor.rs  signal_num.rs  swtch.asm
src/syscall/: mod.rs  syscall.rs  syscall_num.rs  types.rs
src/utils/: elf_rs_wrapper.rs  error.rs  fmt_io.rs  fmt_print.rs  kprint.rs  lock.rs  marcos.rs  mod.rs  panic_handler.rs  random.rs  range.rs  time.rs  types.rs  uart.rs
