cargo-features = ["edition2021"]

[package]
name = "parch_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
buddy_system_allocator = "0.8.0"
riscv = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[build-dependencies]
chrono = "0.4"

[features]
log_fatal       = [                 ]
log_milestone   = ["log_fatal"      ]
log_error 		= ["log_milestone"  ]
log_warning	    = ["log_error"      ]
log_info 		= ["log_warning"    ]
log_debug 	    = ["log_info"       ]
log_verbose	    = ["log_debug"      ]