[package]
name = "parch_kernel"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
buddy_system_allocator = "0.8.0"
riscv = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
static_assertions = "1.1.0"
elf_rs = "0.2.0"

[build-dependencies]
chrono = "0.4"
csv = "1.1.6"

[features]
log_fatal       = [                 ]
log_milestone   = ["log_fatal"      ]
log_error 		= ["log_milestone"  ]
log_warning	    = ["log_error"      ]
log_info 		= ["log_warning"    ]
log_debug 	    = ["log_info"       ]
log_verbose	    = ["log_debug"      ]